base/41-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: shopping-list
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None
