base/51-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-list-api
  namespace: shopping-list
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: shopping-list-api
